# advent_of_code

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  common.cpp  common.h  day03.cpp  day1.cpp  day2.cpp  day3.cpp  day4.cpp  main.cpp  test.cpp
.github/workflows/: test-on-push.yaml
2015/: CMakeLists.txt  common.h  day01.cpp  day02.cpp  day04.cpp  day05.cpp  main.cpp
2015/.github/workflows/: test-on-push.yaml
2022/.github/: dependabot.yml
2024/: package-lock.json  package.json  tsconfig.json
2024/src/: day01.ts  day02.ts  index.ts
